igt@gem_exec_big@single - abort - general protection fault, probably for non-canonical address 0x33383bb3*
<6> [543.955650] Console: switching to colour dummy device 80x25
<6> [543.956000] [IGT] gem_exec_big: executing
<7> [543.957774] i915 0000:00:02.0: [drm:i915_gem_open [i915]]
<7> [543.958794] i915 0000:00:02.0: [drm:i915_drop_caches_set [i915]] Dropping caches: 0x000001dc [0x000001dc]
<7> [543.958994] i915 0000:00:02.0: [drm:i915_gem_open [i915]]
<7> [543.959289] i915 0000:00:02.0: [drm:i915_gem_open [i915]]
<6> [543.962378] [IGT] gem_exec_big: starting subtest single
<7> [543.962419] i915 0000:00:02.0: [drm:i915_gem_open [i915]]
<7> [543.962795] i915 0000:00:02.0: [drm:i915_drop_caches_set [i915]] Dropping caches: 0x00000070 [0x00000070]
<7> [544.277483] i915 0000:00:02.0: [drm:i915_drop_caches_set [i915]] Dropping caches: 0x00000070 [0x00000070]
<7> [544.292681] i915 0000:00:02.0: [drm:i915_gem_open [i915]]
<7> [544.293782] i915 0000:00:02.0: [drm:i915_drop_caches_set [i915]] Dropping caches: 0x00000070 [0x00000070]
<7> [544.308943] i915 0000:00:02.0: [drm:i915_drop_caches_set [i915]] Dropping caches: 0x00000070 [0x00000070]
<4> [545.071814] Oops: general protection fault, probably for non-canonical address 0x33383bb3f2e20ffc: 0000 [#1] PREEMPT SMP NOPTI
<4> [545.071824] CPU: 0 PID: 1428 Comm: gem_exec_big Not tainted 6.10.0-rc7-CI_DRM_15085-g5ed026e3fb07+ #1
<4> [545.071829] Hardware name: Intel(R) Client Systems NUC11TNHi5/NUC11TNBi5, BIOS TNTGL357.0042.2020.1221.1743 12/21/2020
<4> [545.071832] RIP: 0010:eb_relocate_entry.isra.0+0x267/0xdc0 [i915]
<4> [545.071981] Code: 03 0f 85 ee 05 00 00 48 89 e8 4c 8b b3 48 02 00 00 44 8b 3c 24 25 ff 0f 00 00 48 01 c7 41 f6 c6 03 0f 85 88 06 00 00 8b 04 24 <89> 07 80 7c 24 08 00 0f 85 07 04 00 00 4c 8b 64 24 10 49 8b 44 24
<4> [545.071988] RSP: 0018:ffffc900018f7708 EFLAGS: 00010246
<4> [545.071991] RAX: 0000000000200000 RBX: ffffc900018f7a18 RCX: 0000000000000000
<4> [545.071995] RDX: 33383bb3f2e20004 RSI: ffff888000000000 RDI: 33383bb3f2e20ffc
<4> [545.071997] RBP: 0000000197bedffc R08: 000000000000003f R09: 0000000000000000
<4> [545.072000] R10: 0000000000000000 R11: 0000000000000001 R12: ffff88812da43640
<4> [545.072003] R13: ffff88810e62d680 R14: 33383bb3f2e20004 R15: 0000000000200000
<4> [545.072006] FS: 00007fa21900ec40(0000) GS:ffff8884a0000000(0000) knlGS:0000000000000000
<4> [545.072010] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [545.072012] CR2: 00007fa040d02008 CR3: 00000001176a4005 CR4: 0000000000f70ef0
<4> [545.072015] PKRU: 55555554
<4> [545.072017] Call Trace:
<4> [545.072020] <TASK>
<4> [545.072021] ? __die_body+0x1a/0x60
<4> [545.072026] ? die_addr+0x38/0x60
<4> [545.072028] ? exc_general_protection+0x1a1/0x400
<4> [545.072034] ? asm_exc_general_protection+0x26/0x30
<4> [545.072038] ? eb_relocate_entry.isra.0+0x267/0xdc0 [i915]
<4> [545.072143] ? eb_relocate_entry.isra.0+0x1d9/0xdc0 [i915]
<4> [545.072243] eb_relocate_vma+0xef/0x190 [i915]
<4> [545.072344] i915_gem_do_execbuffer+0xf7e/0x28c0 [i915]
<4> [545.072443] ? kernel_text_address+0x5b/0xc0
<4> [545.072448] ? 0xffffffff81000000
<4> [545.072451] ? _raw_spin_unlock_irqrestore+0x58/0x70
<4> [545.072456] ? __lock_acquire+0x4bf/0x1d40
<4> [545.072462] i915_gem_execbuffer2_ioctl+0x125/0x2a0 [i915]
<4> [545.072559] ? __pfx_i915_gem_execbuffer2_ioctl+0x10/0x10 [i915]
<4> [545.072655] drm_ioctl_kernel+0xa8/0x100
<4> [545.072659] drm_ioctl+0x22a/0x440
<4> [545.072662] ? __pfx_i915_gem_execbuffer2_ioctl+0x10/0x10 [i915]
<4> [545.072758] ? ktime_get+0x8c/0x170
<4> [545.072761] ? clockevents_program_event+0x89/0xf0
<4> [545.072766] ? hrtimer_interrupt+0x147/0x270
<4> [545.072770] __x64_sys_ioctl+0x79/0xb0
<4> [545.072775] do_syscall_64+0x66/0x140
<4> [545.072778] entry_SYSCALL_64_after_hwframe+0x76/0x7e
<4> [545.072781] RIP: 0033:0x7fa21b85e5cb
<4> [545.072784] Code: 0f 1e fa 48 8b 05 c5 78 0d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 0f 1f 44 00 00 f3 0f 1e fa b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 95 78 0d 00 f7 d8 64 89 01 48
<4> [545.072791] RSP: 002b:00007fff64546f38 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [545.072795] RAX: ffffffffffffffda RBX: 00007fff64546fd0 RCX: 00007fa21b85e5cb
<4> [545.072798] RDX: 00007fff64546fd0 RSI: 0000000040406469 RDI: 0000000000000005
<4> [545.072801] RBP: 0000000040406469 R08: 0000000000000001 R09: 00000000001d80ff
<4> [545.072804] R10: 00007fa21b962302 R11: 0000000000000246 R12: 0000000000000005
<4> [545.072807] R13: 0000000000000005 R14: 00000000001d8100 R15: 00007fa03d200010